src/shared/adjusters/css/adjusters.css
/* ... */
.gpii-increaseSize-magnifierFollowsRow{
    margin-bottom: 1em !important;
}

.gpii-increaseSize-magnifierFollowsMouseCursor > .gpii-increaseSize-magnifierFollowsIcon:before {
    content: "\e007";
}

.gpii-increaseSize-magnifierFollowsTextCursor > .gpii-increaseSize-magnifierFollowsIcon:before {
    content: "\e000";
}

.gpii-increaseSize-magnifierFollowsKeyboardFocus > .gpii-increaseSize-magnifierFollowsIcon:before {
    content: "\e008";
}

/*
    Style for magnifier follows checked font icons
*/
.gpii-increaseSize-magnifierFollowsIconCheck {
    margin-left: 3.6em;
    margin-top: -2.1em;
}

/*
    Style for magnifier follows legend
*/
.gpii-increaseSize-magnifierFollowsLegend {
    line-height: 1.1em;
    color: #566374;
}

.gpii-increaseSize-magnifierFollowsLegend::first-letter {
    text-transform: capitalize;
}

/*
    Style for preview-per-setting iframe and content
*/
.gpii-prefsEditor-previewPerSettingFrame {
    width: 100% !important;
    margin-top: -1em;
}

.gpii-prefsEditor-previewPerSettingFrame-small {
	height: 80px;
}

.gpii-prefsEditor-previewPerSettingFrame-medium {
	height: 120px;
}

.gpii-prefsEditor-previewPerSettingFrame-large {
	height: 150px;
}

.gpii-prefsEditor-previewPerSettingContainer {
	display: inline-block;
	width:100%;
    background-color: white;
    border: 1px solid #beced1;
    color: #B8C9CC;
    font-size: 2em;
    margin-bottom: 0.5em;
}

.gpii-prefsEditor-previewPerSettingEye:before {
    position: relative;
    z-index: 2;
    background-color: transparent !important;
    content: "\e00c";
}

.gpii-prefsEditor-previewPerSettingEyeBackground {
    position: relative;
    background-color: #000000;
    height: 0.34em;
    margin-left: 0.1em;
    margin-top: 0.1em;
    width: 0.5em;
    z-index: 1;
}

.gpii-prefsEditor-previewPerSettingBody {
    width: 100% !important;
    height: 100% !important;
    margin: 0;
}

.gpii-prefsEditor-previewPerSettingDiv {
    width: 100%; 
    height: 100%; 
    position: relative;
}

.gpii-prefsEditor-previewPerSettingDivInner { 
    position: absolute; 
    display: table; 
    width: 100%; 
    height: 100%; 
}

.gpii-prefsEditor-previewPerSettingDivInner p {
    display: table-cell; 
    vertical-align: middle; 
    text-align: center; 
    padding: 10px;
}

.gpii-prefsEditor-previewPerSettingDivInner div {
    display: table-cell; 
    vertical-align: middle; 
    text-align: center; 
    padding: 10px;
    float: none;
}

.gpii-prefsEditor-previewPerSettingCursor1:before {
    content: "\e006";
}

.gpii-prefsEditor-previewPerSettingCursor2:before {
    content: "\e005";
}

.gpii-prefsEditor-previewPerSettingCursor3:before {
    content: "\e001";
}

/*
    Style for "Add to my preferences" star font icon
*/
.gpii-prefsEditor-adjusterIconsAdditional {
    font-family: 'font-icons-sept-3';
}

.gpii-prefsEditor-addToMyPreferencesStar:before {
    content: "\e000";
}

.gpii-prefsEditor-addToMyPreferencesStar {
    float: right;
    margin-top: -90px;
    color: #6b7281;
    position: relative;
    font-size: 16px;
    display: table;
    padding: 2px;
}

input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
    color: #fae80b;
    border-radius: 50%;
}

.gpii-prefsEditor-addToMyPreferencesLabel {
    height: 17px !important;
    position: absolute;
    width: 17px !important;
    cursor: pointer;
    margin-left: 310px;
    display: table;
    padding: 2px;
    float: right;
    margin-top: -90px;
    position: relative;
}

/*
    Style for tooltips
*/
[title]:after{
    background-color: #f4e413;
    padding:5px;
    position:absolute;
    left:-9999px;
    opacity:0;
    bottom:100%;
    white-space:nowrap;
    -webkit-transition:0.25s linear opacity;
    border: 1px solid black;
    border-radius: 3px 3px 3px 3px;
    font-size: 12px;
    z-index: 10;
    /* we have a conflict with style-speakText.css here */
    right: inherit !important;
}
[title]:hover:after{
    left:0px;
    opacity:1;
}

.gpii-prefsEditor-addToMyPreferencesLabel[title]:after {
    content:attr(tooltip-unchecked);
}

input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-addToMyPreferencesLabel[title]:after {
    content:attr(tooltip-checked);
}

.gpii-increaseSize-magnifierPositionLabel[title] {
    position:relative;
}

.gpii-increaseSize-magnifierPositionLabel[title]:after {
    content: attr(tooltip);
    line-height: 1em !important;
    font-size: 1em;
    white-space:normal;
}

/*
    Style for contrast
*/
.gpii-prefsEditor-theme-yb {
    color: yellow;
    background-color: black;
}

.gpii-prefsEditor-theme-bw {
    color: black;
    background-color: white;
}

.gpii-prefsEditor-theme-by {
    color: black;
    background-color: yellow;
}

.gpii-prefsEditor-theme-wb {
    color: white;
    background-color: black;
}

.gpii-prefsEditor-theme-default {
    color: black;
    background-color: #d5e2de;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerImage {
    background-color: transparent !important;
    color: black !important;
}

.gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerImage {
    background-color: transparent !important;
    color: white !important;
}

.gpii-prefsEditor-theme-by .gpii-prefsEditor-headerImage {
    background-color: transparent !important;
    color: yellow !important;
}

.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerImage {
    background-color: transparent !important;
    color: black !important;
}

.gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerTitle {
    background-color: yellow !important;
    color: black !important;
}

.gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerTitle {
    background-color: black !important;
    color: white !important;
}

.gpii-prefsEditor-theme-by .gpii-prefsEditor-headerTitle {
    background-color: black !important;
    color: yellow !important;
}

.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerTitle {
    background-color: white !important;
    color: black !important;
}
/* ... */

